fix npe