@@ -15,7 +15,7 @@ public record Result(
     ActionHandler actionHandler) {
 
   public Result {
-    interestingLinks = Collections.unmodifiableList(interestingLinks);
+    interestingLinks = interestingLinks != null?Collections.unmodifiableList(interestingLinks):List.of();
   }
 
   @Override
